alpha/blog/nginx_ingress_patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: blog.alpha.alfirth.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: http
  tls:
  - hosts:
    - blog.alpha.alfirth.com
    secretName: blog.alpha.alfirth.com-tls
